Add Additional Implementation to Question 90